Fixes for horizontal scrollbar

--- a/source/MetroBase.scss
+++ b/source/MetroBase.scss
@@ -246,14 +246,26 @@ QTextBrowser
 	font-weight:bold;
 }
 
-QScrollBar
+QScrollBar:horizontal
+{
+	background:transparent;
+	height:15px;
+}
+
+QScrollBar:vertical
 {
 	background:transparent;
 	width:15px;
 }
 
-UserView QScrollBar,
-LogTextBrowser QScrollBar
+UserView QScrollBar:horizontal,
+LogTextBrowser QScrollBar:horizontal
+{
+	margin-top:1px;
+}
+
+UserView QScrollBar:vertical,
+LogTextBrowser QScrollBar:vertical
 {
 	margin-left:1px;
 }
@@ -280,6 +292,7 @@ QAbstractScrollArea::corner
 {
 	background:$base-bg;
 	height:0;
+	width: 0;
 }
 
 QMenuBar
